--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+
     ext.kotlin_version = '1.2.21'
+    ext.support_version = '27.1.0'
+    ext.constraint_layout_version = '1.0.2'
+    ext.junit_version = '4.12'
+    ext.test_runner_version = '1.0.1'
+    ext.espresso_version = '3.0.1'
+
     repositories {
         google()
         jcenter()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0-beta1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
