added service to work correctly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         </receiver>
 
         <receiver android:name=".receiver.PhoneCheckReceiver"/>
+        <service android:name=".service.PhoneCheckService"/>
     </application>
 
 </manifest>
